--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.home.AboutMuseumActivity"></activity>
+        <activity android:name=".common.register_and_login.LoginActivity"></activity>
+        <activity android:name=".ui.home.AboutMuseumActivity" />
         <activity android:name=".ui.home.VolunteerRecruitmentActivity" />
         <activity android:name=".ui.home.VisitByAppointmentActivity" />
         <activity android:name=".ui.home.news.NewsListActivity" />
-        <activity android:name=".ui.common.ArticleActivity" />
+        <activity android:name=".common.ArticleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
