--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".common.login.LoginActivity"></activity>
+        <activity android:name=".common.signup.SignUpActivity"></activity>
+        <activity android:name=".common.login.LoginActivity" />
         <activity android:name=".ui.home.AboutMuseumActivity" />
         <activity android:name=".ui.home.VolunteerRecruitmentActivity" />
         <activity android:name=".ui.home.VisitByAppointmentActivity" />
